# tinychess

./: Cargo.toml  LICENSE  README.md
src/: engine.rs  main.rs  psts  psts.rs
